2002-03-10  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amstatus.pl.in: Fix.
	* client-src/client_util.c (parse_options): Parse auth= option.
	* client-src/client_util.h (option_t): Add auth field.
	* client-src/sendbackup.c: Use auth instead of bsd-auth.
	* client-src/sendsize.c: Init auth.

2002-03-09  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* client-src/sendbackup-dump.c: use amdevice as argument to
	  amname_to_fstype.
	* client-src/sendsize.c: Use amdevice as argument to amname_to_dirname.
	* server-src/dumper.c: clear device if it is set to NODEVICE.

2002-03-08  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amindexd.c: Compilation fix.

2002-03-07 John R. Jackson (jrj@purdue.edu)

	* changer-src/chg-zd-mtx.sh.in: Allow whitespace on a VolumeTag line.
	  Compliments of Christopher McCrory <chrismcc@pricegrabber.com>.

2002-03-06  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* recover-src/amrecover.h (list_disk): Prototype.
	* recover-src/set_commands.c (list_disk): New function.
	* recover-src/uparse.y: parse LISTDISK.
	* recover-src/uscan.l: listdisk keyword.
	* recover-src/help.c: help for listdisk.
	* man/amrecover.8.in: Doc for listdisk.
	* server-src/amindexd.c: New LISTDISK command.
	* docs/INDEXING: Document LISTDISK command.

2002-03-06  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amstatus.pl.in: Better output for autoflush.

2002-03-05  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amstatus.pl.in: Fix.

2002-03-03  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amadmin.c (disklist_one): Print dp->device.
	* server-src/amcheck.c (start_host): Send device if specified.
	* server-src/amstatus.pl.in: Parse line with device.
	* server-src/diskfile.c (parse_diskline): Parse device.
	* server-src/diskfile.c (match_disklist): Match on device.
	* server-src/diskfile.h (disk_t): New field device.