@@ -1,3 +1,9 @@
+2002-03-11  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
+
+	* server-src/amstatus.pl.in: Fix.
+	* server-src/conffile.c(get-compress): Change message for bad 
+	  compress argument.
+
 2002-03-10  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
 
 	* server-src/amstatus.pl.in: Fix.
